--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   },
   "scripts": {
     "dev": "gulp build && gulp serve",
-    "build": "gulp build",
-    "start": "gulp start"
+    "build": "gulp build"
   },
   "dependencies": {}
 }
